# blood_test_analysis

./: .gitignore  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
next-app/: .gitignore  eslint.config.mjs  package-lock.json  package.json  screenshot.mjs
next-app/src/app/: globals.css  layout.tsx  page.tsx
next-app/src/components/: dashboard.tsx  donut.tsx  footer.tsx  gauge.tsx  header.tsx  hero.tsx  patient-switcher.tsx  priority.tsx  section-card.tsx  section-nav.tsx  theme-toggle.tsx  urine-tiles.tsx  wellness-ring.tsx
next-app/src/data/: .gitkeep  report.json
next-app/src/lib/: format.ts  icons.tsx  types.ts
scripts/: extract_pdf.py  opencode_tensorix_acp.zsh  supermemory-tensorix.zsh  verify_parse.py
src/: assets_css.py  assets_js.py  build.py  catalog.py  example_data.py  export_json.py  exporter.py  html_builder.py  interpretations.py  layman.py  loader.py  models.py  names.py  pdf_parser.py  ranges.py  section_plain.py  sections.py  summaries.py
tests/: test_catalog.py  test_example_data.py  test_loader.py  test_models.py  test_ranges.py
worker/: package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
