[project]
name = "blood-test-analysis"
version = "0.1.0"
description = "Blood test report visualizer — Python pipeline + Next.js dashboard"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"src/interpretations.py" = ["E501"]
"src/layman.py" = ["E501"]
"src/section_plain.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
